src/test/ui/variance/variance-contravariant-arg-trait-match.stderr
error[E0308]: mismatched types
  --> $DIR/variance-contravariant-arg-trait-match.rs:13:5
   |
LL |     impls_get::<G,&'min i32>()
   |     ^^^^^^^^^^^^^^^^^^^^^^^^ lifetime mismatch
   |
   = note: expected type `Get<&'min i32>`
              found type `Get<&'max i32>`
note: the lifetime 'min as defined on the function body at 10:21...
  --> $DIR/variance-contravariant-arg-trait-match.rs:10:21
   |
LL | fn get_min_from_max<'min, 'max, G>()
   |                     ^^^^
note: ...does not necessarily outlive the lifetime 'max as defined on the function body at 10:27
  --> $DIR/variance-contravariant-arg-trait-match.rs:10:27
   |
LL | fn get_min_from_max<'min, 'max, G>()
   |                           ^^^^

error[E0308]: mismatched types
  --> $DIR/variance-contravariant-arg-trait-match.rs:21:5
   |
LL |     impls_get::<G,&'max i32>()
   |     ^^^^^^^^^^^^^^^^^^^^^^^^ lifetime mismatch
   |
   = note: expected type `Get<&'max i32>`
              found type `Get<&'min i32>`
note: the lifetime 'min as defined on the function body at 16:21...
  --> $DIR/variance-contravariant-arg-trait-match.rs:16:21
   |
LL | fn get_max_from_min<'min, 'max, G>()
   |                     ^^^^
note: ...does not necessarily outlive the lifetime 'max as defined on the function body at 16:27
  --> $DIR/variance-contravariant-arg-trait-match.rs:16:27
   |
LL | fn get_max_from_min<'min, 'max, G>()
   |                           ^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
